# nircamx

./: .gitignore  README.md  example_config.toml  pyproject.toml
nircamx/: .gitignore  __init__.py  bkgsub.py  engine.py  ref.py  stage1.py  stage2.py  stage3.py  utils.py  wcs.toml
nircamx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
