[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nircamx"
version = "0.1.0"
description = 'Package for JWST NIRCam data reduction'
authors = [
    {name = "Hollis Akins", email = "hollis.akins@gmail.com"},
]
license = {text = 'MIT'}

# Minimum Python version
requires-python = ">=3.11"

dependencies = [
    "astropy",
    "photutils",
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
    "toml",
    "dotmap",
    "jwst",
    "shapely",
    "jhat",
]

[project.scripts]
nircamx = "nircamx.engine:main"